manifest/base/deployment.yaml
# BackBalancer
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: back-balancer
  name: back-balancer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: back-balancer
  template:
    metadata:
      labels:
        app: back-balancer
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - back-balancer
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: back-balancer
        image: rindrics/gtdapp-backbalancer:latest
        ports:
          - name: http
            containerPort: 8888
          - name: grpc
            containerPort: 50051
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: inbox
  name: inbox
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inbox
  template:
    metadata:
      labels:
        app: inbox
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                    - inbox
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: inbox
        image: rindrics/gtdapp-inbox:latest
        ports:
          - name: grpc
            containerPort: 50051
          - name: health
            containerPort: 8880
        readinessProbe:
          httpGet:
            path: /health
            port: 8880
          timeoutSeconds: 3
          initialDelaySeconds: 30
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 250m
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
  name: inbox-db
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inbox-db
  template:
    metadata:
      labels:
        app: inbox-db
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                    - inbox-db
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: inbox-db
        image: postgres:latest
        ports:
          - containerPort: 5432
        readinessProbe:
          exec:
            command:
            - bash
            - "-c"
            - pg_isready -U $POSTGRES_USER -d $POSTGRES_DB -h 127.0.0.1
          initialDelaySeconds: 5
          periodSeconds: 5
