manifest/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inbox
spec:
  selector:
    app: inbox
  ports:
    - protocol: TCP
      port: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: inbox-db
spec:
  selector:
    app: inbox-db
  ports:
    - protocol: TCP
      port: 5432
